--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.4.1",
     "bootswatch": "^4.4.1",
     "font-awesome": "^4.7.0",
+    "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^3.0.1",
     "ngx-gallery": "^5.10.0",
     "ngx-image-gallery": "^2.0.4",
